--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prince Rajesh | AI & FRONTEND Developer</title>
+    <title>Prince Rajesh | AI, Shopify & Frontend Developer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -37,7 +37,7 @@
                 <h3>Web Developer</h3>
             </div>
             <a href="#contact" class="btn pulse">Hire Me</a>
-            <a href="assest/Resume.prince r.pdf" class="btn">Download CV</a>
+            <a href="assest/Prince_Rajesh_CV (2).pdf" class="btn">Download CV</a>
         </div>
         <a href="#about" class="scroll-down">
             <i class="fas fa-chevron-down"></i>
@@ -62,9 +62,12 @@
                 </div>
             </div>
             <div class="column col-right">
-                <h3>AI & Frontend Developer</h3>
-                <p>I'm a passionate developer currently studying Generative AI at PIAIC, with hands-on skills in HTML, CSS, JavaScript, and React.js. I enjoy building modern, responsive web apps and exploring AI integration.</p>
-                <p>Currently learning Agentic AI and improving my React and Next.js skills through personal projects.</p>
+                <h3>AI, Shopify & Frontend Developer</h3>
+                <p>I am a dedicated Frontend & Shopify Developer with expertise in HTML, CSS, JavaScript, React.js, and Next.js. At Brand Space, I work on building and customizing Shopify stores and crafting responsive, user-friendly web experiences. My focus is on creating scalable solutions that not only look great but also perform seamlessly.
+
+🚀 Alongside my frontend journey, I have also completed an AI course from PIAIC, where I explored Generative AI and Agentic AI. While my primary passion lies in Shopify and frontend development, I enjoy experimenting with AI to enhance modern web applications.
+
+✨ My portfolio showcases real-world projects that reflect my skills, creativity, and commitment to delivering impactful digital experiences.</p>
                 <a href="#" class="btn">See More</a>
                 <div class="tech-stack">
                     <div class="tech-icon" data-tooltip="HTML5"><i class="fab fa-html5"></i></div>
@@ -72,6 +75,7 @@
                     <div class="tech-icon" data-tooltip="JavaScript"><i class="fab fa-js"></i></div>
                     <div class="tech-icon" data-tooltip="React"><i class="fab fa-react"></i></div>
                     <div class="tech-icon" data-tooltip="AI"><i class="fas fa-robot"></i></div>
+                    <div class="tech-icon" data-tooltip="Shopify"><i class="fas fa-robot"></i></div>
                 </div>
             </div>
         </div>
@@ -133,6 +137,15 @@
                 <div class="skill-icon">
                     <i class="fas fa-robot"></i>
                 </div>
+                <h3>Shopify</h3>
+                <div class="skill-bar">
+                    <div class="skill-level" data-level="95">95%</div>
+                </div>
+            </div>
+            <div class="skill-card">
+                <div class="skill-icon">
+                    <i class="fab fa-css3-alt"></i>
+                </div>
                 <h3>Generative AI</h3>
                 <div class="skill-bar">
                     <div class="skill-level" data-level="80">80%</div>
@@ -164,7 +177,7 @@
                     <h3>Netflix Clone</h3>
                     <p>Built with HTML, CSS, JavaScript and TMDB API</p>
                     <div class="project-links">
-                        <a href="https://github.com/Prince809t?tab=repositories" class="btn">View Project</a>
+                        <a href="https://netflix-clone-vert-pi-87.vercel.app/" class="btn">View Project</a>
                         <a href="https://github.com/Prince809t/Netflix-Clone" class="btn code-btn">View Code</a>
                     </div>
                 </div>
@@ -186,10 +199,12 @@
                     <h3>Weather App</h3>
                     <p>Built with HTML, CSS, JavaScript and Weather API</p>
                     <div class="project-links">
-                        <a href="https://github.com/Prince809t?tab=repositories" class="btn">View Project</a>
+                        <a href="https://weather-app-nine-coral-66.vercel.app/" class="btn">View Project</a>
                         <a href="https://github.com/Prince809t/weather-app" class="btn code-btn">View Code</a>
                     </div>
                 </div>
+
+                
                 <div class="project-3d-effect"></div>
             </div>
             <div class="project-card">
@@ -204,15 +219,16 @@
                     </div>
                 </div>
                 <div class="project-info">
-                    <h3>Login System</h3>
+                    <h3>Clean zone clean-zone-services-website</h3>
                     <p>Built with HTML, CSS, JavaScript</p>
                     <div class="project-links">
-                        <a href="https://github.com/Prince809t?tab=repositories" class="btn">View Project</a>
+                        <a href="https://clean-zone-services-website.vercel.app/" class="btn">View Project</a>
                         <a href="https://github.com/Prince809t/Project-HTML-CSS" class="btn code-btn">View Code</a>
                     </div>
                 </div>
                 <div class="project-3d-effect"></div>
             </div>
+            
         </div>
     </section>
 
